fixed white space and scroll bar issues in css

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,19 +1,3 @@
-html,
-body,
-#react-root {
-  height: 100%;
-}
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0px;
-}
-
-img {
-  display: inline-block;
-  max-width: 100%;
-}
-
 .container {
   padding-top: 64px;
 }
