--- a/src/components/Chess/Chess.css
+++ b/src/components/Chess/Chess.css
@@ -1,21 +1,18 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-/* create-react-app above */
-
-body,
-html {
-  margin: 0;
-  padding: 0;
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    overflow-y: hidden;
 }
 
 .nav {
@@ -37,14 +34,13 @@ html {
 }
 
 
-
 #background {
   display: flex;
   flex-flow: row; /* chess grid */
-  margin: 0;
   padding-top: 64px;
   background: rgb(157, 175, 141);
-  width: 100%;
+  width: 100%; 
+  /* TODO FIX WIDTH Why is it extra wide and leaving white space? */
   height: 100vh;
   /* border: 5px blue solid; */
 }
@@ -89,12 +85,6 @@ form,
   padding-top: 30px;
 }
 
-#newGame,
-#EvansGambit,
-#makeMove {
-  margin: 5px 0 0 0;
-}
-
 .white {
   background: rgb(247, 208, 164);
 }
@@ -104,10 +94,6 @@ form,
 }
 
 .square {
-  /* max-width: 40px;
-  min-width: 41px;
-  min-height: 40px;
-  max-height: 40px; */
   position: relative;
   display: flex;
   justify-content: center;
@@ -117,11 +103,4 @@ form,
   outline: 1px solid black;
   font-size: 10px;
   text-align: left;
-  /* padding: 0px 0px 0px 2px; */
 }
-
-/* .selectedPieceText {
-  display: flex;
-  justify-content: center;
-  margin: 20px 0 0 0;
-} */
