--- a/src/components/ChessComponents/GameInfo/gameinfo.css
+++ b/src/components/ChessComponents/GameInfo/gameinfo.css
@@ -5,9 +5,10 @@ table {
 }
 
 th, td {
-  border: 1px solid black;
+  outline: 1px solid black;
   padding: 10px;
   text-align: left;
+  width:80px;
 }
 
 th {
